test/corpus/syntax.txt
==================
Rules may touch their opening brace
==================

S{foo}
SS { bar }
${NAME default}
@{git rev-parse HEAD}
@@{pkgconf --libs foo}
^{prefix ${NAME}}
%{main.o}

---

(source_file
  (rule
    name: (rule_name)
    body: (literal))
  (rule
    name: (rule_name)
    body: (literal))
  (rule
    name: (rule_name)
    body: (literal)
    body: (literal))
  (rule
    name: (rule_name)
    body: (literal)
    body: (literal)
    body: (literal))
  (rule
    name: (rule_name)
    body: (literal)
    body: (literal)
    body: (literal))
  (rule
    name: (rule_name)
    body: (literal)
    body: (rule
      name: (rule_name)
      body: (literal)))
  (rule
    name: (rule_name)
    body: (literal)))

==================
Adjacent top-level rules are valid
==================

a{}b{}

---

(source_file
  (rule
    name: (rule_name))
  (rule
    name: (rule_name)))

==================
Negation spread and escapes
==================

if {!defined { DEBUG }
  set { FLAGS ..${FLAGS} escaped\{brace\} escaped\\slash }
}

---

(source_file
  (rule
    name: (rule_name
      (if))
    body: (rule
      name: (rule_name)
      body: (literal))
    body: (rule
      name: (rule_name
        (set))
      body: (literal)
      body: (rule
        name: (rule_name)
        body: (literal))
      body: (literal)
      body: (literal))))

==================
If and else aliases
==================

!if { foo }
else { bar }
holder { if else }
iffoo {}

---

(source_file
  (rule
    name: (rule_name
      (if))
    body: (literal))
  (rule
    name: (rule_name
      (else))
    body: (literal))
  (rule
    name: (rule_name)
    body: (literal)
    body: (literal))
  (rule
    name: (rule_name)))

==================
Directive aliases
==================

meta {}
include {}
option {}
cc {}
cxx {}
env {}
set {}
!set {}
..set {}
let {}
!let {}
..let {}
echo {}
check {}
configure {}
run {}
run-on-install {}
in-sources {}
foreach {}
library {}
install {}
install-sources {}
macro {}
call {}

---

(source_file
  (rule
    (rule_name
      (meta)))
  (rule
    (rule_name
      (include)))
  (rule
    (rule_name
      (option)))
  (rule
    (rule_name
      (cc)))
  (rule
    (rule_name
      (cc)))
  (rule
    (rule_name
      (env)))
  (rule
    (rule_name
      (set)))
  (rule
    (rule_name
      (set)))
  (rule
    (rule_name
      (set)))
  (rule
    (rule_name
      (set)))
  (rule
    (rule_name
      (set)))
  (rule
    (rule_name
      (set)))
  (rule
    (rule_name
      (echo)))
  (rule
    (rule_name
      (check)))
  (rule
    (rule_name
      (configure)))
  (rule
    (rule_name
      (run)))
  (rule
    (rule_name
      (run)))
  (rule
    (rule_name
      (in_sources)))
  (rule
    (rule_name
      (foreach)))
  (rule
    (rule_name
      (library)))
  (rule
    (rule_name
      (install)))
  (rule
    (rule_name
      (install)))
  (rule
    (rule_name
      (macro)))
  (rule
    (rule_name
      (call))))

==================
Condition group aliases
==================

if {
  and {
    !eq { A B }
    defined { C }
    or { prefix { P Q } }
  }
}
!and {}
!or {}
holder { and !and or !or }

---

(source_file
  (rule
    (rule_name
      (if))
    (rule
      (rule_name
        (condition_group))
      (rule
        (rule_name)
        (literal)
        (literal))
      (rule
        (rule_name)
        (literal))
      (rule
        (rule_name
          (condition_group))
        (rule
          (rule_name)
          (literal)
          (literal)))))
  (rule
    (rule_name
      (condition_group)))
  (rule
    (rule_name
      (condition_group)))
  (rule
    (rule_name)
    (literal)
    (literal)
    (literal)
    (literal)))
